<resources>
    <string name="app_name">Demo</string>
    <string name="index">主页</string>

    <string name="action_settings">Settings</string>
    <string name="action_hardware">硬件相关</string>
    <string name="action_network">网络相关</string>
    <string name="action_gesture">手势操作</string>
    <string name="action_view">自定义View</string>
    <string name="action_else">其他</string>


    <string name="ZXing">扫码Deom</string>
    <string name="Camera">照相机</string>
    <string name="PinchZoom">缩放图片</string>
    <string name="Animation">动画效果</string>
    <string name="ZXingfailed">扫码失败</string>
    <string name="MediaPlay">播放器</string>
    <string name="Multitouch">手势</string>
    <string name="FloatingActionButton">浮动按钮</string>
    <string name="GameUI">俄罗斯方块</string>
    <string name="ListView">ListView 带缓存不带线程池</string>
    <string name="ListView2">ListView 带缓存 带线程池</string>
    <string name="Snake">贪吃蛇</string>
    <string name="View">自定义View</string>
    <string name="Volley">Volley</string>


    <string name="picture">Picture</string>
    <string name="description_info">Info</string>

    <string name="add_a_notification">Add a notification</string>
    <string name="active_notifications">Active Notifications: %1$s</string>
    <string name="update_notification_count">Update count</string>
    <string name="sample_notification_content">This is a sample notification.</string>

    <string name="mode_ready">Snake\nPress Up To Play</string>
    <string name="mode_pause">Paused\nPress Up To Resume</string>
    <string name="mode_lose">Game Over\nScore: %1$d \nPress Up To Play</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>

    <string name="menu_3">Menu 3</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_1">Menu 1</string>

</resources>
