<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/GameUI_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GameUI" />


    <Button
        android:id="@+id/Snake_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameUI_btn"
        android:text="@string/Snake" />

    <Button
        android:id="@+id/Car_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Snake_btn"
        android:text="@string/View" />
</RelativeLayout>