<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/ListView_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListView"
        />

    <Button
        android:id="@+id/ListView2_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListView2"
        android:layout_below="@+id/ListView_btn"/>

    <Button
        android:id="@+id/Volley_btn"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Volley"
        android:layout_below="@+id/ListView2_btn"/>
</RelativeLayout>